api info pulling correctly but not showing on screen

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,9 +21,15 @@ body {
     background-color: skyblue;
     font: white;
     height: 40px;
-    width: 100px;
+    width: 500px;
     padding: 10px;
     margin-left: .08%;
+  }
+  #wrap{
+    display: flex;
+    justify-content: center;
+
+
   }
 
   .center{
